# jaxrs-spec-generated/src/main/java/fi/metatavu/oioi/cm/rest/model/ApplicationStructure.java
@@ -1,0 +1,59 @@
+package fi.metatavu.oioi.cm.rest.model;
+
+import java.util.UUID;
+import java.util.List;
+import java.time.OffsetDateTime;
+import java.util.ArrayList;
+import fi.metatavu.oioi.cm.rest.model.*;
+import javax.validation.constraints.*;
+import javax.validation.Valid;
+
+
+import io.swagger.v3.oas.annotations.*;
+import io.swagger.v3.oas.annotations.media.*;
+import java.util.Objects;
+import com.fasterxml.jackson.annotation.JsonProperty;
+import com.fasterxml.jackson.annotation.JsonValue;
+import com.fasterxml.jackson.annotation.JsonCreator;
+
+
+public class ApplicationStructure extends ArrayList<ApplicationStructureItem>  {
+
+
+  @Override
+  public boolean equals(java.lang.Object o) {
+    if (this == o) {
+      return true;
+    }
+    if (o == null || getClass() != o.getClass()) {
+      return false;
+    }
+    ApplicationStructure applicationStructure = (ApplicationStructure) o;
+    return true;
+  }
+
+  @Override
+  public int hashCode() {
+    return Objects.hash();
+  }
+
+  @Override
+  public String toString() {
+    StringBuilder sb = new StringBuilder();
+    sb.append("class ApplicationStructure {\n");
+    sb.append("    ").append(toIndentedString(super.toString())).append("\n");
+    sb.append("}");
+    return sb.toString();
+  }
+
+  /**
+   * Convert the given object to string with each line indented by 4 spaces
+   * (except the first line).
+   */
+  private String toIndentedString(java.lang.Object o) {
+    if (o == null) {
+      return "null";
+    }
+    return o.toString().replace("\n", "\n    ");
+  }
+}
